fix block text alignment for docs

--- a/less/pages/docs.less
+++ b/less/pages/docs.less
@@ -95,6 +95,8 @@ blockquote {
   min-height: .8em;
   background-color: darken(@gray-lighter, 5%);
   margin: .8em 0;
+  width: 100%;
+  text-align: left;
 }
 
 .guide-block-text-medium {
